--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimaryDark">#0083BF</color>
     <color name="colorAccent">#FF3D00</color>
     <color name="colorPrimaryDifferent">#FF3D00</color>
+    <color name="colorFlashlightShade">#FFECB3</color>
     <color name="colorWhiteShade">#FFFFFF</color>
     <color name="colorBlackShade">#474747</color>
     <color name="colorBlackShade2">#7F7F7F</color>
