--- a/app/src/main/res/layout/activity_flash.xml
+++ b/app/src/main/res/layout/activity_flash.xml
@@ -86,7 +86,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardElevation="@dimen/app_bar_elevation"
-        app:cardCornerRadius="5sp"
+        app:cardCornerRadius="25sp"
+        app:cardBackgroundColor="#00FF00"
         android:layout_margin="10sp"
         android:layout_below="@+id/ll"
         android:id="@+id/card">
@@ -102,7 +103,8 @@
                 android:src="@drawable/flashlight"
                 android:padding="15sp"
                 android:onClick="onClick"
-                android:id="@+id/flashlight"/>
+                android:id="@+id/flashlight"
+                android:background="#00000000"/>
 
         </ScrollView>
 
