--- a/app/src/main/res/layout/activity_magnetic.xml
+++ b/app/src/main/res/layout/activity_magnetic.xml
@@ -1,32 +1,262 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_camera"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/magneticX"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/magneticY"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Sense It All!"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:gravity="center"/>
+
+    </android.support.v7.widget.Toolbar>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:id="@+id/toolbar2"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="?actionBarSize">
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/magneticZ"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/vendorMag"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/resolutionMag"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/maximumRange"/>
+        android:orientation="horizontal"
+        android:id="@+id/ll"
+        android:layout_below="@+id/toolbar">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="0sp"
+            android:layout_height="150sp"
+            android:layout_weight="1"
+            android:layout_margin="10sp"
+            app:cardCornerRadius="10sp"
+            app:cardElevation="@dimen/app_bar_elevation">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:src="@drawable/camera"
+                android:padding="10sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5sp"
+            android:layout_margin="10sp"
+            app:cardCornerRadius="10sp"
+            app:cardBackgroundColor="@color/colorPrimaryLight"
+            app:cardElevation="@dimen/app_bar_elevation">
+
+            <TextView
+                android:id="@+id/tvMG"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="@dimen/app_bar_elevation"
+                android:textSize="15sp"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textStyle="bold"
+                android:padding="6sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlackShade"
+                android:text="SAMPLE DATA"/>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardElevation="@dimen/app_bar_elevation"
+        app:cardCornerRadius="5sp"
+        android:layout_margin="10sp"
+        android:layout_below="@+id/ll">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="3">
+
+                <TextView
+
+                    android:text="Magnetic Field (X): "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="0"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1" />
+
+                <TextView
+                    android:id="@+id/magneticX"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="0"/>
+
+                <TextView
+                    android:text="Magnetic Field (Y): "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="1"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/magneticY"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="1"/>
+
+                <TextView
+                    android:text="Magnetic Field (Z): "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="2"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/magneticZ"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="2"/>
+
+                <TextView
+                    android:text="Vendor: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="3"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/vendorMag"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="3"/>
+
+                <TextView
+                    android:text="Resolution: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="4"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/resolutionMag"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="4"/>
+
+                <TextView
+                    android:text="Maximum Range: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="5"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/maximumRange"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="5"/>
+
+                <TextView
+                    android:text="Maximum Charge level: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="6"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/maxcl"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="6"/>
+
+                <TextView
+                    android:text="present: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="7"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/present"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="7"/>
 
 
-</LinearLayout>
+            </GridLayout>
+
+        </ScrollView>
+
+    </android.support.v7.widget.CardView>
+
+</RelativeLayout>
