--- a/app/src/main/res/layout/activity_light.xml
+++ b/app/src/main/res/layout/activity_light.xml
@@ -100,11 +100,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_gravity="center"
                 android:gravity="center">
 
                 <com.github.yongjhih.mismeter.MisMeter
                     android:id="@+id/meter"
+                    android:padding="20sp"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     />
@@ -155,6 +155,109 @@
                         android:id="@+id/current"
                         android:padding="5sp"/>
 
+
+
+                    <TextView
+                        android:layout_row="2"
+                        android:layout_column="0"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:text="Vendor:"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="2"
+                        android:layout_column="1"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:id="@+id/vendor"
+                        android:padding="5sp"/>
+
+
+
+                    <TextView
+                        android:layout_row="3"
+                        android:layout_column="0"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:text="Minimum Delay:"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="3"
+                        android:layout_column="1"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:id="@+id/minimum_delay"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="4"
+                        android:layout_column="0"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:text="Version:"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="4"
+                        android:layout_column="1"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:id="@+id/version"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="5"
+                        android:layout_column="0"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:text="Power:"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="5"
+                        android:layout_column="1"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:id="@+id/power"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="6"
+                        android:layout_column="0"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:text="Resolution:"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="6"
+                        android:layout_column="1"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:id="@+id/resolution"
+                        android:padding="5sp"/>
                 </GridLayout>
 
             </LinearLayout>
