--- a/app/src/main/res/layout/activity_cpu.xml
+++ b/app/src/main/res/layout/activity_cpu.xml
@@ -89,8 +89,7 @@
         app:cardCornerRadius="10sp"
         android:layout_margin="10sp"
         android:padding="5sp"
-        android:layout_below="@+id/ll"
-        app:cardBackgroundColor="@color/colorPrimaryLight">
+        android:layout_below="@+id/ll">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -99,7 +98,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5sp">
 
                 <GridLayout
                     android:layout_width="match_parent"
@@ -107,14 +107,14 @@
                     android:columnCount="3">
 
                     <TextView
-                        android:text="Processor Info"
+                        android:text="Processor Info:"
                         android:gravity="center"
                         android:fontFamily="sans-serif-smallcaps"
                         android:layout_column="0"
                         android:layout_row="0"
                         android:layout_gravity="center"
                         android:padding="3sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"/>
 
                     <TextView
@@ -411,7 +411,7 @@
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="sans-serif-smallcaps"
                     android:padding="3sp"
-                    android:textColor="#000"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp"/>
 
                 <com.github.yongjhih.mismeter.MisMeter
@@ -455,7 +455,7 @@
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="sans-serif-smallcaps"
                     android:padding="3sp"
-                    android:textColor="#000"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp"/>
 
                 <com.github.yongjhih.mismeter.MisMeter
@@ -499,7 +499,7 @@
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="sans-serif-smallcaps"
                     android:padding="3sp"
-                    android:textColor="#000"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp"/>
 
                 <com.github.yongjhih.mismeter.MisMeter
