--- a/app/src/main/res/layout/activity_magnetic.xml
+++ b/app/src/main/res/layout/activity_magnetic.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:text="Sense It All!"
             android:fontFamily="sans-serif-smallcaps"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:textSize="20sp"
             android:gravity="center"/>
 
@@ -94,168 +94,206 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <GridLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="3">
+                android:orientation="vertical"
+                android:gravity="center">
 
-                <TextView
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:padding="10sp">
 
-                    android:text="Magnetic Field (X): "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="0"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1" />
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="0"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Magnetic Field (X):"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/magneticX"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="0"/>
+                    <TextView
+                        android:id="@+id/magneticX"
+                        android:layout_column="1"
+                        android:layout_row="0"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:text="Magnetic Field (Y): "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="1"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1"/>
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="1"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Magnetic Field (Y):"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/magneticY"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="1"/>
-
-                <TextView
-                    android:text="Magnetic Field (Z): "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="2"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1"/>
-
-                <TextView
-                    android:id="@+id/magneticZ"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="2"/>
-
-                <TextView
-                    android:text="Vendor: "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="3"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1"/>
-
-                <TextView
-                    android:id="@+id/vendorMag"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="3"/>
-
-                <TextView
-                    android:text="Resolution: "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="4"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1"/>
-
-                <TextView
-                    android:id="@+id/resolutionMag"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="4"/>
-
-                <TextView
-                    android:text="Maximum Range: "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="5"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1"/>
-
-                <TextView
-                    android:id="@+id/maximumRange"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="5"/>
-
-                <TextView
-                    android:text="Maximum Charge level: "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="6"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1"/>
-
-                <TextView
-                    android:id="@+id/maxcl"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="6"/>
-
-                <TextView
-                    android:text="present: "
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="7"
-                    android:padding="3sp"
-                    android:layout_columnWeight="1"/>
-
-                <TextView
-                    android:id="@+id/present"
-                    android:textColor="#000"
-                    android:text="___"
-                    android:padding="3sp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="7"/>
+                    <TextView
+                        android:id="@+id/magneticY"
+                        android:layout_column="1"
+                        android:layout_row="1"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
 
-            </GridLayout>
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="2"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Magnetic Field (Z):"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/magneticZ"
+                        android:layout_column="1"
+                        android:layout_row="2"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="3"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Vendor:"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/vendorMag"
+                        android:layout_column="1"
+                        android:layout_row="3"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="4"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Resolution:"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/resolutionMag"
+                        android:layout_column="1"
+                        android:layout_row="4"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="5"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Maximum Range:"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/maximumRange"
+                        android:layout_column="1"
+                        android:layout_row="5"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="6"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Power:"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/maxcl"
+                        android:layout_column="1"
+                        android:layout_row="6"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="7"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Present:"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/present"
+                        android:layout_column="1"
+                        android:layout_row="7"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_row="8"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:text="Calibrator:"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/calib"
+                        android:layout_column="1"
+                        android:layout_row="8"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:padding="5sp"
+                        android:textColor="#000"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+                </GridLayout>
+
+            </LinearLayout>
 
         </ScrollView>
+
+
 
     </android.support.v7.widget.CardView>
 
