--- a/app/src/main/res/layout/activity_magnetic.xml
+++ b/app/src/main/res/layout/activity_magnetic.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:src="@drawable/camera"
+                android:src="@drawable/mag"
                 android:padding="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -76,7 +76,7 @@
                 android:padding="6sp"
                 android:gravity="center"
                 android:textColor="@color/colorBlackShade"
-                android:text="SAMPLE DATA"/>
+                android:text="MAGNETIC FIELD SENSOR"/>
 
         </android.support.v7.widget.CardView>
 
