--- a/app/src/main/res/layout/activity_multi_touch.xml
+++ b/app/src/main/res/layout/activity_multi_touch.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    <com.dmitrybrant.android.multitouch.MultiTouchCanvas
+    <com.appbusters.robinkamboj.senseitall.controller.MultiTouchCanvas
         android:id="@+id/multiTouchView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
