--- a/app/src/main/res/layout/activity_multi_touch.xml
+++ b/app/src/main/res/layout/activity_multi_touch.xml
@@ -3,21 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    <com.appbusters.robinkamboj.senseitall.controller.MultiTouchCanvas
-        android:id="@+id/multiTouchView"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <TextView
-        android:id="@+id/txtInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#50000000"
-        android:padding="8dp" />
-    <Button
-        android:id="@+id/btnAbout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        style="?android:attr/buttonStyleSmall"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
+
+        <com.appbusters.robinkamboj.senseitall.controller.MultiTouchCanvas
+            android:id="@+id/multiTouchView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/tvInfo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="9"
+            android:background="@color/colorBlackShade"
+            android:fontFamily="serif-monospace"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_light"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 </FrameLayout>
